[gd_scene load_steps=3 format=3 uid="uid://dgl0r10usch4rg3"]

[ext_resource type="Script" path="res://scripts/glorious_charge_dialog.gd" id="1_charge"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.15, 0.08, 0.05, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.85, 0.5, 0.2, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0

[node name="GloriousChargeDialog" type="CanvasLayer"]
layer = 100
visible = false
script = ExtResource("1_charge")

[node name="BackgroundOverlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.3, 0.1, 0, 0.7)

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -180.0
offset_right = 280.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="TitleLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.6, 0.2, 1)
theme_override_font_sizes/font_size = 28
text = "GLORIOUS CHARGE!"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="MarshalLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.9, 0.8, 1)
theme_override_font_sizes/font_size = 18
text = "Ney's blood is up!"
horizontal_alignment = 1

[node name="RecklessnessLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.75, 0.55, 1)
theme_override_font_sizes/font_size = 16
text = "Recklessness: |||| (3/4)"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="WarningLabel" type="Label" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.4, 0.4, 1)
theme_override_font_sizes/font_size = 14
text = "Glorious Charge deals 2x damage but also TAKES 2x damage!
Target: Wellington"
horizontal_alignment = 1
autowrap_mode = 3
vertical_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="ChargeButton" type="Button" parent="PanelContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(0, 55)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.9, 0.7, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0.8, 1)
theme_override_font_sizes/font_size = 14
text = "CHARGE! (2x damage)"

[node name="RestrainButton" type="Button" parent="PanelContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(0, 55)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 14
text = "Restrain - Normal Attack"
